--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-redux": "^8.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1",
-    "react-toastify": "^9.0.8"
+    "react-toastify": "^9.0.8",
+    "styled-components": "^5.3.5"
   },
   "scripts": {
     "start": "react-scripts start",
